# Project-CSI

./: .gitignore  CMakeLists.txt  CMakePresets.json  IMPROVEMENT-TODO.md  Project_Documentation.tex  Project_Specification_Report.md  QUICK_START_UI.md  README.md  UI-IMPROVEMENTS-TODO.md  UI_DEVELOPMENT_GUIDE.md  imgui.ini  improvement-v1.md  improvement-v2.md  push_to_github.sh
.cache/clangd/index/: Command.h.524AC01000B280ED.idx  CommandHistory.cpp.5AA9A359E41133A7.idx  CommandHistory.h.49979B1072FE5352.idx  DesignSpaceFactory.cpp.768ABFAC59EAD115.idx  DesignSpaceFactory.h.69DF7330EE679FD3.idx  HttpDispatchClient.cpp.4DAF89D7F7951E31.idx  HttpDispatchClient.h.E818FE49E9EFAF8A.idx  LightingPanel.h.67203AD817A6904F.idx  MTLParser.h.4B5426EE46C505FA.idx  MainWindow.cpp.B67A34A252F46FD8.idx  MainWindow.h.3E04CCCFED9332B7.idx  MaterialDefinition.cpp.43E67D2C8F47D6F4.idx  MaterialDefinition.h.9592367CF7B753D3.idx  MaterialPreviewWidget.h.6D41E65F7FC8D59B.idx  OBJ_Loader.h.BBA4DD633EC62F25.idx  PresetEditorDialog.cpp.74F613B35E98418E.idx  PresetEditorDialog.h.D8D503AA39A22921.idx  PresetRepository.cpp.A01C2E0A17967374.idx  PresetRepository.h.1566F01B6891E860.idx  PropertiesPanel.cpp.CD4F2718FDEA8509.idx  PropertiesPanel.h.DFA6B556F50D8718.idx  RemoteCredentialDialog.cpp.ACA9EAC258C02C12.idx  RemoteCredentialDialog.h.2319CE8FECBED9EE.idx  RemoteCredentialsStore.cpp.2868789D8C59F46D.idx  RemoteCredentialsStore.h.80905A2B616394FB.idx  RemoteDispatchClient.h.15D527B78C358E71.idx  RemoteDispatchCommon.h.11B584A55415B572.idx  RemoteDispatchManager.cpp.77E23DCA45EE9848.idx  RemoteDispatchManager.h.2E2C21D4CA129762.idx  RemoteWorkerConfig.cpp.60830C210DE5B5D6.idx  RemoteWorkerConfig.h.9E2668C4E35E993B.idx  RenderController.cpp.1EFE600CBEEDDE30.idx  RenderController.h.1932354A5F4A251F.idx  RenderQueueModel.cpp.9B0D49343E528607.idx  RenderQueueModel.h.72A15F091FAB8630.idx  RenderSettingsModel.cpp.5F6119F3ED956EC5.idx  RenderSettingsModel.h.BE45FDB030B792AB.idx  RenderSettingsPanel.cpp.43531BCDD63E2883.idx  RenderSettingsPanel.h.2C6E44817A7D56CF.idx  RenderViewportWidget.cpp.FB1DFCA251ECEEDD.idx  (+97 more)
.github/workflows/: asan.yml  ci.yml  quick-build.yml  release.yml
assets/: cornell_water_scene.xml  debug_scene_triangle.xml  dragon_scene.xml  ex.xml  gaming_room.xml  ggx_test.xml  hundred_spheres.xml  objects.xml  officeChair.mtl  pbr_test_scene.xml  stress_bunny.xml  stress_comparison.xml  temp.xml  thousand_triangles.xml
scripts/: extract_pptx.py
src/: main.cpp  render_presets.h
src/engine/: aabb.cpp  aabb.h  bvh_node.cpp  bvh_node.h  camera.cpp  camera.h  config.h  constant_medium.h  denoiser.h  dielectric.cpp  dielectric.h  emissive.h  ggx_material.h  gltf_loader.cpp  gltf_loader.h  hdri_environment.cpp  hdri_environment.h  hittable.h  hittable_list.cpp  hittable_list.h  image_texture.h  isotropic.h  lambertian_textured.h  material.h  mesh.cpp  mesh.h  mis.h  noise_texture.h  oidn_denoiser.cpp  oidn_denoiser.h  onb.h  pbr_material.h  pdf.cpp  pdf.h  perlin.h  point_light.h  quad.h  render_runner.cpp  render_runner.h  rotate_y.h  (+11 more)
src/engine/factories/: factory_methods.cpp  factory_methods.h
src/gui/: gl_texture.cpp  gl_texture.h  gui_application.cpp  gui_application.h  main.cpp
src/ui/: main.cpp
src/ui/commands/: Command.h  CommandHistory.cpp  CommandHistory.h  SceneCommands.cpp  SceneCommands.h
src/ui/controllers/: RenderController.cpp  RenderController.h  SelectionManager.cpp  SelectionManager.h  ViewportCameraController.cpp  ViewportCameraController.h
src/ui/models/: DesignSpaceFactory.cpp  DesignSpaceFactory.h  MaterialDefinition.cpp  MaterialDefinition.h  PresetRepository.cpp  PresetRepository.h  RenderQueueModel.cpp  RenderQueueModel.h  RenderSettingsModel.cpp  RenderSettingsModel.h  SceneDocument.cpp  SceneDocument.h  SceneNode.cpp  SceneNode.h  Transform.cpp  Transform.h
src/ui/rendering/: ToneMappingPresets.cpp  ToneMappingPresets.h
src/ui/serialization/: SceneSerializer.cpp  SceneSerializer.h  XMLSceneSerializer.cpp  XMLSceneSerializer.h
src/ui/services/: RendererService.cpp  RendererService.h  SceneConverter.cpp  SceneConverter.h  SceneImportService.cpp  SceneImportService.h
src/ui/services/remote/: HttpDispatchClient.cpp  HttpDispatchClient.h  RemoteCredentialsStore.cpp  RemoteCredentialsStore.h  RemoteDispatchClient.h  RemoteDispatchCommon.h  RemoteDispatchManager.cpp  RemoteDispatchManager.h  RemoteWorkerConfig.cpp  RemoteWorkerConfig.h  SshDispatchClient.cpp  SshDispatchClient.h
src/ui/views/: LightingPanel.cpp  LightingPanel.h  MainWindow.cpp  MainWindow.h  PresetEditorDialog.cpp  PresetEditorDialog.h  PropertiesPanel.cpp  PropertiesPanel.h  RemoteCredentialDialog.cpp  RemoteCredentialDialog.h  RenderSettingsPanel.cpp  RenderSettingsPanel.h  RenderViewportWidget.cpp  RenderViewportWidget.h  SceneEditorWidget.cpp  SceneEditorWidget.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneViewport.cpp  SceneViewport.h
src/util/: logging.cpp  logging.h  util.h  vec3.cpp  vec3.h
